I did as much as I can few tests and worked on components but not best

--- a/src/containers/Listings/listings.module.scss
+++ b/src/containers/Listings/listings.module.scss
@@ -1,5 +1,9 @@
 @use '@styles/variables' as *;
 
+.listinglistContainer {
+  overflow-y: scroll;
+  height: 800px;
+}
 .listings {
   padding: $space-s;
 
